--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -6,11 +6,9 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Pace Calculator</title>
   </head>
-
   <body>
     <a href="https://github.com/bombsimon/pace-calculator" class="github-corner" aria-label="View source on GitHub">
       <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#982736; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
@@ -21,5 +19,6 @@
     </a>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
